# blup

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PHASE2_SUMMARY.md  README.md
.claude/: settings.json
apps/: AGENTS.md  plan_phase1.md  plan_phase2.5.md  plan_phase3.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: export.rs  import.rs  mod.rs  sandbox.rs
assets/: AGENTS.md  plan_phase3.md
crates/: AGENTS.md  plan_phase1.md  plan_phase2.5.md  plan_phase2.md  plan_phase3.md
crates/agent-core/: Cargo.toml
crates/agent-core/src/: error.rs  lib.rs  main.rs
crates/agent-core/src/api/: mod.rs
crates/agent-core/src/llm/: client.rs
crates/agent-core/src/models/: types.rs
crates/agent-core/src/prompts/: loader.rs
crates/agent-core/src/server/: handlers.rs  router.rs  types.rs
crates/agent-core/src/server/handlers/: chapter.rs  curriculum.rs  exercise.rs  export.rs  goal.rs  health.rs  helpers.rs  messages.rs  mod.rs  profile.rs  progress.rs  question.rs  sandbox.rs  session.rs
crates/agent-core/src/state/: domain.rs  machine.rs  mod.rs  session.rs  types.rs
crates/agent-core/src/validation/: schema_validator.rs
crates/blup-agent/: Cargo.toml
crates/blup-agent/src/: config.rs  engine.rs  error.rs  lib.rs  step.rs
crates/blup-agent/src/audit/: event.rs  mod.rs  storage.rs
crates/blup-agent/src/mcp/: auth.rs  client.rs  config.rs  mod.rs  tool.rs
crates/blup-agent/src/memory/: compaction.rs  long_term.rs  mod.rs  short_term.rs
crates/blup-agent/src/prompt/: loader.rs  mod.rs
crates/blup-agent/src/provider/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai.rs  retry.rs  transform.rs  types.rs
crates/blup-agent/src/schema/: mod.rs  validator.rs
crates/blup-agent/src/tools/: builtin.rs  mod.rs  web_search.rs
crates/content-pipeline/: Cargo.toml
crates/content-pipeline/src/: error.rs  lib.rs
crates/content-pipeline/src/citation/: mod.rs  tracker.rs
crates/content-pipeline/src/export/: markdown_validation.rs  mod.rs  typst_compiler.rs  typst_renderer.rs
crates/content-pipeline/src/import/: chunker.rs  markdown.rs  metadata.rs  mod.rs  pdf.rs  text.rs  website.rs
crates/content-pipeline/src/models/: document_artifact.rs  export_job.rs  import_job.rs  mod.rs  source_document.rs
crates/sandbox-manager/: Cargo.toml
crates/sandbox-manager/src/: config.rs  error.rs  executor.rs  generated.rs  lib.rs  session.rs
crates/sandbox-manager/src/docker/: client.rs  container.rs
crates/sandbox-manager/src/models/: image.rs  limits.rs  mod.rs  request.rs  result.rs  status.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  connection.rs  error.rs  lib.rs
crates/storage/src/migrations/: 0001_create_sessions.sql  0002_create_curricula.sql  0003_create_progress.sql  0004_create_messages.sql  0005_create_assessments.sql  0006_create_content_pipeline.sql
crates/storage/src/models/: assessment.rs  content.rs  curriculum.rs  message.rs  mod.rs  progress.rs  session.rs
crates/storage/tests/: integration_test.rs
docs-internal/: AGENTS.md  add_other_program_sandbox_plan.md  add_program_consol.md  architecture.md  plan_phase0.md
plugins/: AGENTS.md  plan_phase3.md
prompts/: AGENTS.md  chapter_markdown_repair.v1.prompt.md  chapter_teaching.v1.prompt.md  curriculum_planning.v1.prompt.md  feasibility_check.v1.prompt.md  plan_phase1.md  profile_collection.v1.prompt.md  question_answering.v1.prompt.md
sandboxes/: AGENTS.md  plan_phase2.md
schemas/: AGENTS.md  assessment_result.v1.schema.json  chapter.v1.schema.json  chapter_progress.v1.schema.json  curriculum_plan.v1.schema.json  document_artifact.v1.schema.json  exercise.v1.schema.json  export_job.v1.schema.json  feasibility_result.v1.schema.json  import_job.v1.schema.json  learning_goal.v1.schema.json  message.v1.schema.json  plan_phase1.md  (+4 more)
scripts/: bootstrap  (+3 more)
services/llm-gateway/: pyproject.toml  requirements.txt
services/llm-gateway/src/: config.py  main.py
services/llm-gateway/src/cache/: __init__.py  prompt_cache.py
services/llm-gateway/src/middleware/: circuit_breaker.py  cost_tracker.py  rate_limiter.py
services/llm-gateway/src/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
services/llm-gateway/src/routes/: complete.py  health.py
services/llm-gateway/src/routing/: fallback.py
services/llm-gateway/tests/: test_gateway.py
tests/: AGENTS.md  Cargo.toml  plan_phase1.md  plan_phase2.5.md  plan_phase2.md  plan_phase3.md
tests/export/: mod.rs  typst_render_test.rs
tests/fixtures/mock_llm_responses/curriculum/: curriculum_plan.json
tests/fixtures/mock_llm_responses/feasibility/: feasible.json  infeasible.json
tests/fixtures/mock_llm_responses/profile/: profile_complete.json  question_round1.json
tests/fixtures/payloads/: invalid_learning_goal.json  valid_learning_goal.json
tests/fixtures/sse_streams/: normal_stream.txt
tests/import/: chunker_test.rs  markdown_import_test.rs  mod.rs  pdf_import_test.rs  text_import_test.rs
tests/src/: assessment.rs  lib.rs  sandbox.rs
tests/src/common/: mod.rs
tests/src/contract/: mod.rs
tests/src/integration/: mod.rs
tests/src/state/: machine_test.rs  mod.rs
tools/prompt-tester/: pyproject.toml  requirements.txt
tools/prompt-tester/fixtures/curriculum_planning/: advanced_rust.json  beginner_python.json
tools/prompt-tester/fixtures/feasibility_check/: infeasible_goal.json
tools/prompt-tester/fixtures/profile_collection/: round3_complete.json
tools/prompt-tester/src/: __init__.py  config.py  fixture_manager.py  gateway_client.py  main.py  mock_llm.py  renderer.py  reporter.py  tester.py  validator.py
tools/prompt-tester/tests/: test_fixture_manager.py  test_renderer.py  test_tester.py  test_validator.py
tools/sandbox-builder/: Cargo.toml
tools/sandbox-builder/src/: builder.rs  config.rs  error.rs  main.rs
tools/typst-export/: Cargo.toml
tools/typst-export/src/: main.rs
(+174 files in other folders)
