[workspace]
members = ["crates/agent-core", "crates/blup-agent", "crates/storage", "crates/assessment-engine", "crates/sandbox-manager", "crates/content-pipeline", "tests", "tools/schema-validator", "tools/sandbox-builder", "tools/typst-export", "tools/content-importer", "apps/desktop/src-tauri"]
resolver = "2"
