[package]
name = "blup-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-core = { path = "../crates/agent-core" }
blup-agent = { path = "../crates/blup-agent" }
axum = { version = "0.7", features = ["macros"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
uuid = { version = "1", features = ["v4"] }
