[package]
name = "blup-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-core = { path = "../crates/agent-core" }
blup-agent = { path = "../crates/blup-agent" }
storage = { path = "../crates/storage" }
assessment-engine = { path = "../crates/assessment-engine" }
sandbox-manager = { path = "../crates/sandbox-manager" }
content-pipeline = { path = "../crates/content-pipeline" }
axum = { version = "0.7", features = ["macros"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
