[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
description = "Blup AI learning-agent core — orchestrates learning flow, LLM calls, validation"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
jsonschema = "0.46"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
