[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
description = "Blup AI learning-agent core — HTTP server, state machine, session management"

[dependencies]
blup-agent = { path = "../blup-agent" }
storage = { path = "../storage" }
assessment-engine = { path = "../assessment-engine" }
content-pipeline = { path = "../content-pipeline" }
sandbox-manager = { path = "../sandbox-manager" }
base64 = "0.22"
sha2 = "0.10"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
