[package]
name = "sandbox-manager"
version = "0.1.0"
edition = "2021"
description = "Docker-based sandbox manager for code execution"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
