[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "Persistent storage for Blup learning sessions"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
