[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-tester"
version = "0.1.0"
description = "Test prompt templates against fixtures and schema contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Blup Team" },
]
dependencies = [
    "jsonschema>=4.20.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
prompt-tester = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]
