[package]
name = "blup-desktop"
version = "0.2.0"
edition = "2021"
description = "Blup desktop application"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"

content-pipeline = { path = "../../../crates/content-pipeline" }
sandbox-manager = { path = "../../../crates/sandbox-manager" }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
